--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "react-hello-advance",
+    "homepage": "https://LazaroAntonino.github.io/BodaNachoRocio",
     "private": true,
     "version": "0.0.0",
     "type": "module",
@@ -8,7 +9,9 @@
         "start": "vite",
         "build": "vite build",
         "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d dist"
     },
     "dependencies": {
         "@fortawesome/free-brands-svg-icons": "^7.1.0",
@@ -31,6 +34,7 @@
         "eslint-plugin-react": "^7.33.1",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.3",
+        "gh-pages": "^6.3.0",
         "vite": "^4.4.8"
     },
     "engines": {
